# retrofunk

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
core/: CMakeLists.txt  Component.cpp  Component.h  Entity.cpp  Entity.h  Serializer.cpp  Serializer.h  State.h
platform/: CMakeLists.txt
test/: CMakeLists.txt
test/test-core/: CMakeLists.txt  TestComponent.cpp  TestComponent.h  TestComponent2.cpp  TestComponent2.h  TestEntity.cpp  TestEntity.h  TestSerializer.cpp  TestSerializer.h  component.spec.cpp  entity.spec.cpp
